--- a/Lessons/Lesson9/maket/css/slider.css
+++ b/Lessons/Lesson9/maket/css/slider.css
@@ -9,7 +9,7 @@
     margin: 0 auto;
 }
 
-div.sliderContent h1:first-of-type {
+div.sliderContent p:first-of-type {
     padding-top: 213px;
     color: #ffffff;
     font-family: Lato;
@@ -17,7 +17,7 @@ div.sliderContent h1:first-of-type {
     font-weight: 700;
 }
 
-div.sliderContent p:first-of-type {
+div.sliderContent p:nth-of-type(2) {
     padding-top: 49px;
     width: 626px;
     color: #ffffff;
